Fixed admin logo on Firefox and added translation for map_style setting

--- a/themes/Rozier/static/css/panels/user_panel/user_panel.less
+++ b/themes/Rozier/static/css/panels/user_panel/user_panel.less
@@ -57,7 +57,7 @@
             .transition(opacity ease 0.5s);
             -webkit-font-smoothing: subpixel-antialiased;
             padding-left: 0px;
-
+            width: 99%; // on Firefox, prevent line-return
             vertical-align: middle;
 
             img {
